--- a/css/meuestilo.css
+++ b/css/meuestilo.css
@@ -1,14 +1,28 @@
 body{
     background-color: rgb(203, 203, 203);
+    background-image: url(.../img/fundo.png);
 }
 header{
     background-color: rgb(255, 168, 168);
+}
+
+#menu ul li{display: inline;}
+
+/* CRIANDO MEU MENU */
+  #menu ul{
+     padding: 2px 10px;
+     display: inline-block;
+     text-decoration: none;
+     border-bottom: 3px solid rgb(109, 108, 108) ;
 }
 .logo{
     background-color: rgb(202, 142, 207);
 }
 nav{
     background-color: rgb(230, 190, 249);
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 main{
    background-color: rgb(167, 229, 233);
@@ -31,5 +45,11 @@ padding: 3%;
 }
 footer{
     background-color: rgb(228, 177, 242);
+    padding: 3%;
+}
+.cabecalho{
+padding: 3%;
+}
+.rodape{
     padding: 3%;
 }
