--- a/css/meuestilo.css
+++ b/css/meuestilo.css
@@ -1,6 +1,10 @@
 body{
-    background-color: rgb(203, 203, 203);
-    background-image: url(.../img/fundo.png);
+    /* background-color: #050404; */
+    background-image: url('../img/gunxin.jpg')  ; 
+    padding: 1%;
+    margin-left: auto;
+    margin-right: auto;
+   
 }
 header{
     background-color: rgb(255, 168, 168);
@@ -13,7 +17,7 @@ header{
      padding: 2px 10px;
      display: inline-block;
      text-decoration: none;
-     border-bottom: 3px solid rgb(109, 108, 108) ;
+     border-bottom: 3px solid rgb(173, 49, 49) ;
 }
 .logo{
     background-color: rgb(202, 142, 207);
@@ -25,30 +29,33 @@ nav{
     margin-right: auto;
 }
 main{
-   background-color: rgb(167, 229, 233);
+   color: rgb(0, 0, 0);
 }
 section{
-    background-color: rgb(196, 183, 245);
+ background-color: rgb(171, 184, 184)
 }
 footer{
-    background-color: rgb(235, 197, 255);
+    background-color: rgb(136, 108, 151);
 }
 main{
-    background-color: rgb(216, 164, 244);
+    background-color: rgb(164, 244, 217);
     width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
 header{
-    background-color: rgb(235, 203, 253);
+    background-color: rgb(253, 215, 203);
 padding: 3%;
 }
 footer{
-    background-color: rgb(228, 177, 242);
+    background-color: rgb(85, 66, 79);
     padding: 3%;
 }
 .cabecalho{
-padding: 3%;
+    padding: 3%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .rodape{
     padding: 3%;
@@ -68,3 +75,32 @@ table {
     tr:nth-child(even){
         background-color: #dddddd;
     }
+    .imgem
+    {
+      
+           /* Estilos opcionais para a imagem */
+           max-width: 100%; /* Garante que a imagem não ultrapasse a largura da tela */
+           max-height: 100%; /* Garante que a imagem não ultrapasse a altura da tela */
+           background-image: url('.jpg/gunxin'); /* Estilos opcionais para a imagem */
+           padding: 10%;
+           max-width: 100%; /* Garante que a imagem não ultrapasse a largura da tela */
+           max-height: 100%; /* Garante que a imagem não ultrapasse a altura da tela */
+          padding: 2%;
+    }
+    .logoi img{
+        width: 15%;
+        height: auto;
+}
+    p{
+        line-height: 1.5;
+        font-size: 1.2em;
+        text-align: justify;
+    }
+  .figure{
+    text-align: center;
+    display: inline-block;
+  }
+  .caixa-imagem{
+    text-align: center;
+    margin-top: 1%;
+  }
