--- a/css/meuestilo.css
+++ b/css/meuestilo.css
@@ -1,54 +1,79 @@
 body{
     /* background-color: #050404; */
-    background-image: url('../img/gunxin.jpg')  ; 
+    background-color: #99b3c2;
+    background-image: url('../img/fundo.png')  ; 
     padding: 1%;
     margin-left: auto;
     margin-right: auto;
-   
+    background-repeat: no-repeat;
 }
 header{
-    background-color: rgb(255, 168, 168);
+   padding: 3%;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+
 }
 
 #menu ul li{display: inline;}
 
 /* CRIANDO MEU MENU */
   #menu ul{
-     padding: 2px 10px;
-     display: inline-block;
-     text-decoration: none;
-     border-bottom: 3px solid rgb(173, 49, 49) ;
+     padding: 0 px;
+     margin: 0px;
+     list-style: none;
+   display: flex;
 }
+
+#menu ul li{
+display: inline;
+font-size: 1.2em;
+}
+
+#menu ul li a {
+    padding: 2px 10px;
+    display: inline-block;
+    text-decoration: none;
+    /* border-bottom:3px solid #ededed*/
+    white-space: nowrap;
+    color: #dddddd;
+}
+
 .logo{
-    background-color: rgb(202, 142, 207);
+   /*whidth: 35%; ou ajuste conforme necessario*/
+   max-width: 100%;
+   height: auto;
 }
 nav{
-    background-color: rgb(230, 190, 249);
+   
     width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+   
 }
 main{
    color: rgb(0, 0, 0);
+   width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 section{
- background-color: rgb(171, 184, 184)
+
 }
 footer{
-    background-color: rgb(136, 108, 151);
+    
 }
 main{
-    background-color: rgb(164, 244, 217);
+
     width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
 header{
-    background-color: rgb(253, 215, 203);
+
 padding: 3%;
 }
 footer{
-    background-color: rgb(85, 66, 79);
+ 
     padding: 3%;
 }
 .cabecalho{
@@ -71,12 +96,8 @@ table {
     text-align: left;
     padding: 8px;
   }
-  
-    tr:nth-child(even){
-        background-color: #dddddd;
-    }
-    .imgem
-    {
+
+    .imgem {
       
            /* Estilos opcionais para a imagem */
            max-width: 100%; /* Garante que a imagem não ultrapasse a largura da tela */
@@ -86,6 +107,7 @@ table {
            max-width: 100%; /* Garante que a imagem não ultrapasse a largura da tela */
            max-height: 100%; /* Garante que a imagem não ultrapasse a altura da tela */
           padding: 2%;
+         
     }
     .logoi img{
         width: 15%;
@@ -100,7 +122,42 @@ table {
     text-align: center;
     display: inline-block;
   }
+
+  figure img{
+    display: block;
+    margin: 0 auto;
+    box-shadow:0px 4px 8px rgb(39, 27, 104);
+    max-width: 100%;
+    height: auto;
+  }
+
+  figure figcaption{
+    margin: 1.0em;
+    text-align: center;
+    color: aquamarine;
+  }
   .caixa-imagem{
     text-align: center;
     margin-top: 1%;
+
+  }
+  .titulos{
+    line-height: 3;
+    text-align: center;
+    font-weight: bold;
+  }
+  .H1{
+    font-size: 2em;
+  }
+  .h2{
+    font-size: 1.5em;
+  }
+  .h3{
+    font-size: 1.5em;
+  }
+  .h3{
+    font-size: 1.5em;
+  }
+  .h4{
+    font-size: 1.5em;
   }
