--- a/css/meuestilo.css
+++ b/css/meuestilo.css
@@ -17,27 +17,29 @@ header{
 
 #menu ul li{display: inline;}
 
-/* CRIANDO MEU MENU */
-  #menu ul{
-     padding: 0 px;
-     margin: 0px;
-     list-style: none;
-   display: flex;
+nav ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
-#menu ul li{
-display: inline;
-font-size: 1.2em;
+nav ul li {
+     margin: 0 10px;
 }
 
-#menu ul li a {
-    padding: 2px 10px;
-    display: inline-block;
-    text-decoration: none;
-    /* border-bottom:3px solid #ededed*/
-    white-space: nowrap;
-    color: #dddddd;
+nav ul li a:hover{
+  background-color: #a0aeee;
+  border-radius: 5px;
 }
+
+.menu-icon{
+  display: none;
+  font-size: 30px;
+  color: aqua;
+  cursor: pointer;
+}
+
 
 .logo{
    /*whidth: 35%; ou ajuste conforme necessario*/
@@ -50,14 +52,15 @@ nav{
    
 }
 main{
-   color: rgb(0, 0, 0);
+   margin-top: 70px;
+   padding: 20px;
    width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
 
 section{
-
+  padding: 20px;
 }
 footer{
     
@@ -76,11 +79,18 @@ footer{
  
     padding: 3%;
 }
-.cabecalho{
-    padding: 3%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+ .cabecalho{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(185, 199, 226);
+  padding: 10px 20px;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+  box-sizing: border-box;
 }
 .rodape{
     padding: 3%;
@@ -92,10 +102,17 @@ table {
     width: 100%;
   }
   
-  td, th {
+  td{
     border: 1px solid #000000;
     text-align: left;
     padding: 8px;
+    background-color: rgb(142, 159, 214);
+  }
+  th{
+    border: 1px solid #000000;
+    text-align: left;
+    padding: 8px;
+    background-color: #a4baf8;
   }
   
   
@@ -104,7 +121,7 @@ table {
            /* Estilos opcionais para a imagem */
            max-width: 100%; /* Garante que a imagem não ultrapasse a largura da tela */
            max-height: 100%; /* Garante que a imagem não ultrapasse a altura da tela */
-           background-image: url('.jpg/gunxin'); /* Estilos opcionais para a imagem */
+           background-image: url("img/mondstard.jpg"); /* Estilos opcionais para a imagem */
            padding: 10%;
            max-width: 100%; /* Garante que a imagem não ultrapasse a largura da tela */
            max-height: 100%; /* Garante que a imagem não ultrapasse a altura da tela */
@@ -162,4 +179,44 @@ table {
   }
   .h4{
     font-size: 1.5em;
+  }
+
+  @media ( max-width: 768px) {
+        .menu-icon{
+            display: block;
+            padding-right: 10px;
+        }
+
+        nav ul{
+          display: none;
+          flex-direction: column;
+          width: 100%;
+          background-color: #000000;
+          position: absolute;
+          top: 60px;
+          left: 0;
+          z-index: 1000;
+          padding: 0;
+        }
+
+        #menu-toggle:checked + .menu-icon + ul{
+          display: flex;
+        }
+        nav ul li{
+          text-align: center;
+          margin: 0;
+        }
+
+        nav ul li a{
+          padding: 15px 0;
+        }
+
+        nav ul li label{
+          width: 100%;
+          display: block;
+        }
+  }
+
+  .img{
+align-items: center;
   }
