--- a/css/meuestilo.css
+++ b/css/meuestilo.css
@@ -172,7 +172,7 @@ footer{
           display: none;
           flex-direction: column;
           width: 100%;
-          background-color: #000000;
+          background-color: #b5bbf1;
           position: absolute;
           top: 60px;
           left: 0;
